syntax = "proto3";

package com.ajaxproject.api.internal.warehousesvc.input.reqreply.product;

import "com/ajaxproject/api/internal/warehousesvc/commonmodels/product/product.proto";

option java_package = "com.ajaxproject.api.internal.warehousesvc.input.reqreply.product";
option java_multiple_files = true;

message CreateProductRequest {
  string title = 1;
  double price = 2;
  int32 amount = 3;
  optional string about = 4;
}

message CreateProductResponse {

  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.product.Product product = 1;
  }

  message Failure {
    string message = 100;
  }
}
