syntax = "proto3";

package com.ajaxproject.api.internal.warehousesvc.input.reqreply.product;

import "com/ajaxproject/api/internal/warehousesvc/commonmodels/product/product.proto";

option java_package = "com.ajaxproject.api.internal.warehousesvc.input.reqreply.product";
option java_multiple_files = true;

message GetProductByIdRequest {
  string id = 1;
}

message GetProductByIdResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.product.Product product = 1;
  }

  message Failure {
    string message = 100;
  }
}
