syntax = "proto3";

package com.ajaxproject.api.internal.warehousesvc.input.reqreply.product;

import "com/ajaxproject/api/internal/warehousesvc/commonmodels/product/product.proto";

option java_package = "com.ajaxproject.api.internal.warehousesvc.input.reqreply.product";
option java_multiple_files = true;

message UpdateProductRequest {
  optional string id = 1;
  string title = 2;
  double price = 3;
  int32 amount = 4;
  optional string about = 5;
}

message UpdateProductResponse {

  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.product.Product product = 1;
  }

  message Failure {
    string message = 100;
  }
}
